modules/Networking/vpc/nacl/main.tf
resource "aws_network_acl" "main" {
  vpc_id = var.vpc_id

  egress {
    protocol   = "tcp"
    rule_no    = 101
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 443
    to_port    = 443
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 101
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 80
    to_port    = 80
  }

  tags = {
    Name = "public_subnet_nacl"
  }
}


resource "aws_network_acl_association" "main"{
  network_acl_id = aws_network_acl.main.id
  subnet_id      = var.subnet_id
  }
